--- a/pytorch_test/use_nn.ipynb
+++ b/pytorch_test/use_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,15 +98,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.1024, -0.1426, -0.0364, -0.0722, -0.0210,  0.0902, -0.0801, -0.0674,\n",
-      "          0.0620,  0.0855]], grad_fn=<AddmmBackward>)\n"
+      "tensor([[ 0.0702, -0.0296,  0.0051,  0.1153,  0.0012,  0.0783,  0.0588,  0.0465,\n",
+      "         -0.0270,  0.1233]], grad_fn=<AddmmBackward>)\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,18 +136,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-0.4768,  0.5627, -0.4631, -0.1945,  2.2527, -0.0236, -0.5360,  0.8781,\n",
-      "         1.0647,  0.0367])\n",
-      "tensor([[-0.4768,  0.5627, -0.4631, -0.1945,  2.2527, -0.0236, -0.5360,  0.8781,\n",
-      "          1.0647,  0.0367]])\n",
-      "tensor(0.8322, grad_fn=<MseLossBackward>)\n"
+      "tensor([-0.8441,  0.4439,  0.7589, -1.2557, -1.9404, -0.0382,  0.9071,  0.0158,\n",
+      "        -0.1488,  0.1646])\n",
+      "tensor([[-0.8441,  0.4439,  0.7589, -1.2557, -1.9404, -0.0382,  0.9071,  0.0158,\n",
+      "         -0.1488,  0.1646]])\n",
+      "tensor(0.8029, grad_fn=<MseLossBackward>)\n"
      ]
     }
    ],
@@ -165,16 +165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<MseLossBackward object at 0x7f9046525280>\n",
-      "<AddmmBackward object at 0x7f9046525d60>\n",
-      "<AccumulateGrad object at 0x7f9046525280>\n"
+      "<MseLossBackward object at 0x7f97829f51c0>\n",
+      "<AddmmBackward object at 0x7f97829f5220>\n",
+      "<AccumulateGrad object at 0x7f97829f51c0>\n"
      ]
     }
    ],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
       "conv1.bias.grad before backward\n",
       "tensor([0., 0., 0., 0., 0., 0.])\n",
       "conv1.bias.grad after backward\n",
-      "tensor([ 0.0000, -0.0135,  0.0055,  0.0026,  0.0024,  0.0116])\n"
+      "tensor([-0.0002,  0.0042, -0.0018,  0.0099,  0.0000, -0.0028])\n"
      ]
     }
    ],
@@ -220,6 +220,52 @@
     "\n",
     "print('conv1.bias.grad after backward')\n",
     "print(net.conv1.bias.grad)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "更新权重\n",
+    "\n",
+    "实践中使用的最简单的更新规则是随机梯度下降（SGD）"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_rate = 0.01\n",
+    "for f in net.parameters():\n",
+    "    f.data.sub_(f.grad.data*learning_rate)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "但是，在使用神经网络时，您希望使用各种不同的更新规则，例如 SGD，Nesterov-SGD，Adam，RMSProp 等。为实现此目的，我们构建了一个小包装：torch.optim，可实现所有这些方法。 使用它非常简单"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.optim as optim\n",
+    "# create your optimizer\n",
+    "optimizer = optim.SGD(net.parameters(), lr=0.01)\n",
+    "optimizer.zero_grad()  # zero the gradient buffers\n",
+    "output= net(input)\n",
+    "loss = criterion(output, target)\n",
+    "loss.backward()\n",
+    "optimizer.step() # Does the update\n",
+    "\n"
    ]
   }
  ],
